# PKIProject

./: .gitignore  README.md  generate_csr.sh
ACR/: .gitignore  Cargo.toml
ACR/src/: aci.rs  acr.rs  acrconfig.rs  lib.rs  main.rs
AE/: .gitignore  Cargo.toml  config.json
AE/aci/: aci.crt  aci.key  ca-root.crt
AE/src/: aci.rs  config.rs  crl.rs  lib.rs  mail.rs  main.rs
AEFront/: README.md  angular.json  package-lock.json  package.json
AEFront/src/: index.html
AEFront/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  request.service.ts
AEFront/src/app/accueil/: accueil.component.html  accueil.component.ts
AEFront/src/app/confirmation-mail/: confirmation-mail.component.html  confirmation-mail.component.ts
AEFront/src/app/email-formulaire/: email-formulaire.component.html  email-formulaire.component.ts
AEFront/src/app/form-download/: form-download.component.html  form-download.component.ts
AEFront/src/app/revoke-formulaire/: revoke-formulaire.component.html  revoke-formulaire.component.ts
OCSP/: ca-root.key.pem  command.ps1  log.txt  ocspSigning.csr  ocspSigning.key  openssl.cnf  validation.conf
OCSP/commands/: check_validity  revoke_cert
OCSP/my_ca/: index.txt  index.txt.old
OCSP/my_ca/certs/: 10.pem
