[package]
name = "acr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0"
serde_json = "1.0"
openssl= { version = "0.10.49", features = ["vendored"] }
simple_logger = "4.1"
log = "0.4"