[package]
name = "ae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"

actix-web = "4"
actix-multipart = "0.6.0"
actix-cors = "0.6.4"
lettre = "0.10"
openssl = "0.10.49"
lettre = "0.10.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
x509-cert = "0.2.1"